# mpi_3body

./: .gitignore  CMakeLists.txt  gen_tests.py
src/: common.c  common.h  compute_accelerations.c  compute_accelerations.h  main.c
